--- a/LangChain_SQLAgents.ipynb
+++ b/LangChain_SQLAgents.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMZSIVS3eY/MwsKDu7boS6I",
+      "authorship_tag": "ABX9TyMO9JH7qSclX6oKLkCrufBW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -38,7 +38,7 @@
         },
         "collapsed": true,
         "id": "YY0uSY9ZoUc2",
-        "outputId": "dfc0cf33-33f3-474d-8531-fb81e5865779"
+        "outputId": "5eeef15d-0035-4d55-a03d-9738ec4ce9e0"
       },
       "outputs": [
         {
@@ -94,12 +94,12 @@
             "Requirement already satisfied: pyasn1<0.7.0,>=0.6.1 in /usr/local/lib/python3.11/dist-packages (from pyasn1-modules>=0.2.1->google-auth!=2.24.0,!=2.25.0,<3.0.0,>=2.14.1->google-ai-generativelanguage<0.7.0,>=0.6.18->langchain-google-genai) (0.6.1)\n",
             "Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.11/dist-packages (from anyio->httpx<1,>=0.23.0->langsmith<0.4,>=0.1.17->langchain) (1.3.1)\n",
             "Downloading PyMySQL-1.1.1-py3-none-any.whl (44 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.0/45.0 kB\u001b[0m \u001b[31m2.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.0/45.0 kB\u001b[0m \u001b[31m2.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading langchain_google_genai-2.1.4-py3-none-any.whl (44 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.3/44.3 kB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.3/44.3 kB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading filetype-1.2.0-py2.py3-none-any.whl (19 kB)\n",
             "Downloading google_ai_generativelanguage-0.6.18-py3-none-any.whl (1.4 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m57.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m32.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: filetype, pymysql, google-ai-generativelanguage, langchain-google-genai\n",
             "  Attempting uninstall: google-ai-generativelanguage\n",
             "    Found existing installation: google-ai-generativelanguage 0.6.15\n",
@@ -119,7 +119,7 @@
                   "google"
                 ]
               },
-              "id": "e47fb801497a4df2a2f64a93bd0a5ce1"
+              "id": "8dde3db4927844e6ba1c362c99037b0f"
             }
           },
           "metadata": {}
@@ -140,9 +140,9 @@
         },
         "collapsed": true,
         "id": "RVlEukhhrv-M",
-        "outputId": "35100724-338b-40d3-a497-ac3480b1ec49"
+        "outputId": "bae9254e-d3fe-4608-c07c-559a002b3f63"
       },
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,11 +203,11 @@
             "  Downloading mypy_extensions-1.1.0-py3-none-any.whl.metadata (1.1 kB)\n",
             "Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.11/dist-packages (from anyio->httpx<1,>=0.23.0->langsmith<0.4,>=0.1.125->langchain-community) (1.3.1)\n",
             "Downloading langchain_community-0.3.24-py3-none-any.whl (2.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m90.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m46.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading dataclasses_json-0.6.7-py3-none-any.whl (28 kB)\n",
             "Downloading httpx_sse-0.4.0-py3-none-any.whl (7.8 kB)\n",
             "Downloading pydantic_settings-2.9.1-py3-none-any.whl (44 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.4/44.4 kB\u001b[0m \u001b[31m4.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.4/44.4 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading marshmallow-3.26.1-py3-none-any.whl (50 kB)\n",
             "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.9/50.9 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading python_dotenv-1.1.0-py3-none-any.whl (20 kB)\n",
@@ -226,14 +226,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 409
+          "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "KhnBsquzs3_1",
-        "outputId": "d2372170-7a27-43e5-8bc9-bf12a95742ea"
+        "outputId": "3cdbf6d0-c1b6-46e6-ece0-57dc77d46288"
       },
-      "execution_count": 18,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,26 +248,37 @@
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->google-search-results) (2025.4.26)\n",
             "Building wheels for collected packages: google-search-results\n",
             "  Building wheel for google-search-results (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for google-search-results: filename=google_search_results-2.4.2-py3-none-any.whl size=32010 sha256=22ad49551d66e7d3b655a178bbb4b341fea9cfe7273431ef5cfdfc89f67404d3\n",
+            "  Created wheel for google-search-results: filename=google_search_results-2.4.2-py3-none-any.whl size=32010 sha256=a5c9262dad19c7531d1b921117cc9ccce0d745aa338c29ac96cf89a41c538d43\n",
             "  Stored in directory: /root/.cache/pip/wheels/6e/42/3e/aeb691b02cb7175ec70e2da04b5658d4739d2b41e5f73cd06f\n",
             "Successfully built google-search-results\n",
             "Installing collected packages: google-search-results\n",
             "Successfully installed google-search-results-2.4.2\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install pymongo"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
+        "id": "ae_LRp1eDk8F",
+        "outputId": "c90e10dc-a8ce-42ca-ce51-5790191731fd"
+      },
+      "execution_count": 12,
+      "outputs": [
         {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "serpapi"
-                ]
-              },
-              "id": "324b6a0abe7245e39703ea0405fb8344"
-            }
-          },
-          "metadata": {}
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pymongo in /usr/local/lib/python3.11/dist-packages (4.13.0)\n",
+            "Requirement already satisfied: dnspython<3.0.0,>=1.16.0 in /usr/local/lib/python3.11/dist-packages (from pymongo) (2.7.0)\n"
+          ]
         }
       ]
     },
@@ -321,7 +331,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4GhQFRStrfzS",
-        "outputId": "52a84c59-5fbb-4d8a-f2cc-2fa13a1c6cf8"
+        "outputId": "116be11f-92ce-4298-8bed-7260ac651267"
       },
       "execution_count": 3,
       "outputs": [
@@ -343,25 +353,33 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 72
         },
         "id": "Hd5viw6RtOxo",
-        "outputId": "2faa2fe2-d977-49ea-b911-dcb756b66a1b"
+        "outputId": "2f34fa04-482a-4159-b3ab-fd9c392d4674"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-4-07eef0794918>:1: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+            "  agent.run(\"Who is Cristiano's girlfriend ? What is her current age? What is her current age raised to the power of 2 ?\")\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\"Cristiano Ronaldo's girlfriend is Georgina Rodríguez. Her current age is 30. Her current age raised to the power of 2 is 900.\""
+              "\"Cristiano Ronaldo's girlfriend is Georgina Rodríguez. Her current age is 31. Her current age raised to the power of 2 is 961.\""
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -371,14 +389,103 @@
         "from langchain.agents import create_sql_agent\n",
         "from langchain.agents.agent_toolkits import SQLDatabaseToolkit\n",
         "from langchain.sql_database import SQLDatabase\n",
-        "from langchain.llms.google_vertexai import GoogleVertexAI\n",
+        "from langchain_google_genai import ChatGoogleGenerativeAI\n",
         "from langchain.agents import AgentExecutor"
       ],
       "metadata": {
         "id": "4cEOWjwktmS2"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pymongo import MongoClient\n",
+        "from langchain.agents import initialize_agent, AgentType\n",
+        "from langchain.tools import Tool\n",
+        "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+        "\n",
+        "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\")\n",
+        "\n",
+        "mongo_uri = \"mongodb+srv://visvafelix2005:visva@cluster0.jgomacv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
+        "client = MongoClient(mongo_uri)\n",
+        "db = client[\"sample_mflix\"]\n",
+        "collection = db[\"movies\"]\n",
+        "\n",
+        "def mongo_query_tool(query: str) -> str:\n",
+        "    try:\n",
+        "        key, value = query.split(\"=\")\n",
+        "        results = collection.find({key.strip(): value.strip()})\n",
+        "        return \"\\n\".join([str(doc) for doc in results.limit(5)]) or \"No documents found.\"\n",
+        "    except Exception as e:\n",
+        "        return f\"Error: {e}\"\n",
+        "\n",
+        "toolkit = [Tool(\n",
+        "    name=\"MongoDB Query Tool\",\n",
+        "    func=mongo_query_tool,\n",
+        "    description=\"Query MongoDB using 'field=value' format.\"\n",
+        ")]\n",
+        "\n",
+        "agent = initialize_agent(\n",
+        "    tools=toolkit,\n",
+        "    llm=llm,\n",
+        "    agent=AgentType.ZERO_SHOT_REACT_DESCRIPTION,\n",
+        "    verbose=True\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "1g3Ikyi3EJIL"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "agent.run(\"Give the plot for Inception ?\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        },
+        "id": "1EPSpSVsOk1p",
+        "outputId": "c8ecdfbe-2b22-4168-893d-8e35d1215594"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\n",
+            "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+            "\u001b[32;1m\u001b[1;3mI need to retrieve the plot of the movie Inception from the database.\n",
+            "Action: MongoDB Query Tool\n",
+            "Action Input: title=Inception\u001b[0m\n",
+            "Observation: \u001b[36;1m\u001b[1;3m{'_id': ObjectId('573a13c5f29313caabd6ee61'), 'fullplot': \"Dom Cobb is a skilled thief, the absolute best in the dangerous art of extraction, stealing valuable secrets from deep within the subconscious during the dream state, when the mind is at its most vulnerable. Cobb's rare ability has made him a coveted player in this treacherous new world of corporate espionage, but it has also made him an international fugitive and cost him everything he has ever loved. Now Cobb is being offered a chance at redemption. One last job could give him his life back but only if he can accomplish the impossible-inception. Instead of the perfect heist, Cobb and his team of specialists have to pull off the reverse: their task is not to steal an idea but to plant one. If they succeed, it could be the perfect crime. But no amount of careful planning or expertise can prepare the team for the dangerous enemy that seems to predict their every move. An enemy that only Cobb could have seen coming.\", 'imdb': {'rating': 8.8, 'votes': 1294646, 'id': 1375666}, 'year': 2010, 'plot': 'A thief who steals corporate secrets through use of dream-sharing technology is given the inverse task of planting an idea into the mind of a CEO.', 'genres': ['Action', 'Mystery', 'Sci-Fi'], 'rated': 'PG-13', 'metacritic': 74, 'title': 'Inception', 'lastupdated': '2015-09-12 00:29:01.430000000', 'languages': ['English', 'Japanese', 'French'], 'writers': ['Christopher Nolan'], 'type': 'movie', 'tomatoes': {'website': 'http://inceptionmovie.warnerbros.com/', 'viewer': {'rating': 4.2, 'numReviews': 561365, 'meter': 91}, 'dvd': datetime.datetime(2010, 12, 7, 0, 0), 'critic': {'rating': 8.1, 'numReviews': 326, 'meter': 86}, 'boxOffice': '$292.6M', 'consensus': 'Smart, innovative, and thrilling, Inception is that rare summer blockbuster that succeeds viscerally as well as intellectually.', 'rotten': 45, 'production': 'Warner Bros. Pictures', 'lastUpdated': datetime.datetime(2015, 9, 12, 17, 13, 32), 'fresh': 281}, 'poster': 'https://m.media-amazon.com/images/M/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_SY1000_SX677_AL_.jpg', 'num_mflix_comments': 1, 'released': datetime.datetime(2010, 7, 16, 0, 0), 'awards': {'wins': 162, 'nominations': 172, 'text': 'Won 4 Oscars. Another 158 wins & 172 nominations.'}, 'countries': ['USA', 'UK'], 'cast': ['Leonardo DiCaprio', 'Joseph Gordon-Levitt', 'Ellen Page', 'Tom Hardy'], 'directors': ['Christopher Nolan'], 'runtime': 148}\u001b[0m\n",
+            "Thought:\u001b[32;1m\u001b[1;3mI have found the plot for Inception.\n",
+            "Final Answer: A thief who steals corporate secrets through use of dream-sharing technology is given the inverse task of planting an idea into the mind of a CEO.\u001b[0m\n",
+            "\n",
+            "\u001b[1m> Finished chain.\u001b[0m\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'A thief who steals corporate secrets through use of dream-sharing technology is given the inverse task of planting an idea into the mind of a CEO.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     }
   ]
 }
